# find

./: .gitignore  GEMINI.md  LICENSE  README.md  config.yaml.example  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: architecture.md  code_style.md  git_conventions.md  plan.md  testing.md
nl_find/: __main__.py
nl_find/cli/: __init__.py  app.py
nl_find/config/: __init__.py
nl_find/core/: __init__.py  backends.py  executor.py  llm_parser.py
nl_find/gui/: main_window.py
nl_find/gui/widgets/: __init__.py  file_list.py  search_bar.py
scripts/: install_everything.bat  install_fd.sh
src/: __init__.py
src/cli/: app.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  backends.py  exceptions.py  executor.py  llm_parser.py  models.py
src/gui/: __init__.py  main_window.py
src/gui/widgets/: dir_tree.py  file_list.py  search_bar.py
tests/: __init__.py  conftest.py  test_backends.py  test_cli.py  test_exceptions.py  test_executor.py  test_llm_parser.py  test_models.py  test_settings.py
